--- a/front-end/tsconfig.node.json
+++ b/front-end/tsconfig.node.json
@@ -4,7 +4,10 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true,
+    "checkJs": false,
+    "noEmit": true
   },
   "include": ["vite.config.js"]
 } 
